--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,6 @@ jobs:
 
       - name: Get polserver HEAD ref
         id: get-ref
-        shell: pwsh
         run: |
           echo "ref=$( cd native/polserver && git log -1 --format=%h )" >> $GITHUB_OUTPUT
 
@@ -53,7 +52,7 @@ jobs:
 
       - name: Get polserver HEAD ref
         id: get-ref
-        shell: pwsh
+        shell: bash
         run: |
           echo "ref=$( cd native/polserver && git log -1 --format=%h )" >> $GITHUB_OUTPUT
 
@@ -86,7 +85,6 @@ jobs:
 
       - name: Get polserver HEAD ref
         id: get-ref
-        shell: pwsh
         run: |
           echo "ref=$( cd native/polserver && git log -1 --format=%h )" >> $GITHUB_OUTPUT
 
@@ -97,9 +95,8 @@ jobs:
           key: mac-polserver-full-${{ steps.get-ref.outputs.ref }}
 
       - name: Set polserver Dependencies
-        shell: pwsh
         run: |
-          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
       - run: npm install
 
