some changes to e2e tests

--- a/client/package.json
+++ b/client/package.json
@@ -18,13 +18,14 @@
 		"vscode": "^1.78.0"
 	},
 	"scripts": {
-		"test": "node ./test/runTest.js"
+		"test": "echo E2E tests currently disabled, see ./jest.e2.config.js",
+		"_test": "node ./test/runTest.js"
 	},
 	"dependencies": {
 		"vscode-languageclient": "^8.1.0"
 	},
 	"devDependencies": {
 		"@types/vscode": "^1.78.0",
-		"vscode-test": "^1.6.1"
+		"@vscode/test-electron": "^2.3.2"
 	}
 }
