--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,6 +100,8 @@ jobs:
 
       - run: npm install
 
+      - run: npm run eslint
+
       - run: npm test && echo npm run e2e
 
       - run: npx vsce package
