--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,21 +11,20 @@ on:
 jobs:
   linux:
     name: Test and Package [Linux]
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
 
       - name: Get polserver HEAD ref
         id: get-ref
-        shell: pwsh
         run: |
-          echo "::set-output name=ref::$( cd native/polserver && git log -1 --format=%h )"
+          echo "ref=$( cd native/polserver && git log -1 --format=%h )" >> $GITHUB_OUTPUT
 
       - name: Cache polserver
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: native/polserver
           key: linux-polserver-full-${{ steps.get-ref.outputs.ref }}
@@ -37,7 +36,7 @@ jobs:
       - run: npx vsce package
 
       - name: Upload Extension Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: escript-lsp-linux
           path: escript-lsp-*.vsix
@@ -47,18 +46,18 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
 
       - name: Get polserver HEAD ref
         id: get-ref
-        shell: pwsh
+        shell: bash
         run: |
-          echo "::set-output name=ref::$( cd native/polserver && git log -1 --format=%h )"
+          echo "ref=$( cd native/polserver && git log -1 --format=%h )" >> $GITHUB_OUTPUT
 
       - name: Cache polserver
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: native/polserver
           key: windows-polserver-full-${{ steps.get-ref.outputs.ref }}
@@ -70,7 +69,7 @@ jobs:
       - run: npx vsce package
 
       - name: Upload Extension Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: escript-lsp-windows
           path: escript-lsp-*.vsix
@@ -80,35 +79,35 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
 
       - name: Get polserver HEAD ref
         id: get-ref
-        shell: pwsh
         run: |
-          echo "::set-output name=ref::$( cd native/polserver && git log -1 --format=%h )"
+          echo "ref=$( cd native/polserver && git log -1 --format=%h )" >> $GITHUB_OUTPUT
 
       - name: Cache polserver
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: native/polserver
           key: mac-polserver-full-${{ steps.get-ref.outputs.ref }}
 
       - name: Set polserver Dependencies
-        shell: pwsh
         run: |
-          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
       - run: npm install
+
+      - run: npm run eslint
 
       - run: npm test && echo npm run e2e
 
       - run: npx vsce package
 
       - name: Upload Extension Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: escript-lsp-osx
           path: escript-lsp-*.vsix
