--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
 	"categories": [],
 	"keywords": [],
 	"engines": {
-		"vscode": "^1.52.0"
+		"vscode": "^1.78.0"
 	},
 	"activationEvents": [
-		"*"
+		"onDebug"
 	],
 	"repository": {
 		"type": "git",
@@ -166,20 +166,20 @@
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
 	"dependencies": {
-		"vscode-languageclient": "^7.0.0"
+		"vscode-languageclient": "^8.1.0"
 	},
 	"devDependencies": {
-		"@types/jest": "^26.0.20",
-		"@types/mock-fs": "^4.13.0",
-		"@types/node": "^12.19.11",
-		"@typescript-eslint/parser": "^4.11.0",
-		"eslint": "^7.16.0",
-		"jest": "^26.6.3",
-		"js-yaml": "^3.14.1",
-		"mock-fs": "^4.13.0",
-		"rimraf": "^3.0.2",
-		"ts-jest": "^26.5.0",
-		"ts-loader": "^8.0.12",
-		"typescript": "^4.1.3"
+		"@types/jest": "^29.5.1",
+		"@types/mock-fs": "^4.13.1",
+		"@types/node": "^20.2.4",
+		"@typescript-eslint/parser": "^5.59.7",
+		"eslint": "^8.41.0",
+		"jest": "^29.5.0",
+		"js-yaml": "^4.1.0",
+		"mock-fs": "^5.2.0",
+		"rimraf": "^5.0.1",
+		"ts-jest": "^29.1.0",
+		"ts-loader": "^9.4.3",
+		"typescript": "^5.0.4"
 	}
 }
