--- a/.vscodeignore
+++ b/.vscodeignore
@@ -13,7 +13,8 @@ client/node_modules/**
 !client/node_modules/vscode-languageclient/**
 !client/node_modules/vscode-languageserver-protocol/**
 !client/node_modules/vscode-languageserver-types/**
-!client/node_modules/semver/**
+!client/node_modules/{minimatch,brace-expansion,concat-map,balanced-match}/**
+!client/node_modules/{semver,lru-cache,yallist}/**
 server/test/**
 client/jest.e2e.config.js
 server/jest.config.js
