--- a/package.json
+++ b/package.json
@@ -37,6 +37,16 @@
 					".em"
 				],
 				"configuration": "./language-configuration.json"
+			},
+			{
+				"id": "cfgpol",
+				"aliases": [
+					"cfgpol"
+				],
+				"extensions": [
+					".cfg"
+				],
+				"configuration": "./language-configuration.json"
 			}
 		],
 		"grammars": [
@@ -44,6 +54,11 @@
 				"language": "escript",
 				"scopeName": "source.escript",
 				"path": "./grammars/escript.json"
+			},
+			{
+				"language": "cfgpol",
+				"scopeName": "source.cfgpol",
+				"path": "./grammars/cfg.json"
 			}
 		],
 		"breakpoints": [
@@ -162,7 +177,7 @@
 		"clean": "rimraf client/out server/out grammars/escript.json",
 		"e2e": "cd client && npm test",
 		"test": "jest --coverage",
-		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json",
+		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json && js-yaml grammars/cfg.yml > grammars/cfg.json",
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
 	"dependencies": {
