Fix comments inside bracketed element

--- a/grammars/cfg.yml
+++ b/grammars/cfg.yml
@@ -29,6 +29,7 @@ repository:
 
   child-elem-begin:
     patterns:
+      - include: '#comment'
       - begin: (\w+)\s*(=)?\s*
         end: $
         beginCaptures:
