--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,6 +96,10 @@ jobs:
         run: |
           echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
 
+      - name: Set MACOSX_DEPLOYMENT_TARGET
+        run: |
+          echo "MACOSX_DEPLOYMENT_TARGET=13.3" >> $GITHUB_ENV
+
       - run: npm install && npm run build
 
       - run: npm test
