--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,15 @@
 		"url": "https://github.com/polserver/vscode-escript"
 	},
 	"dependencies": {
+		"async": "^3.2.5",
 		"vscode-escript-native": "file:../native",
 		"vscode-languageserver": "^8.1.0",
 		"vscode-languageserver-textdocument": "^1.0.8",
 		"vscode-uri": "^3.0.7"
 	},
-	"scripts": {}
+	"scripts": {},
+	"devDependencies": {
+		"@types/async": "^3.2.24",
+		"@types/node": "^18.15.0"
+	}
 }
