--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ coverage
 .vscode-test
 build
 prebuilds
-native/test/ecompile.cfg
+native/test/scripts/ecompile.cfg
 .vscode/c_cpp_properties.json
 .vscode/settings.json
 .cache
