Add XML documentation download and display, user comments to hover and signature help (#34)
* add comments to hover

* wip on docs downloader

* change HoverBuilder result type

* wip

* can hover

* wip signature help docs

* add highlighting for escript inside markdown

* fixup downloading

* implement configuration updates

* finish up hover doc highlighting

* cleanup code symbols from comments

* Fix tests and various test implementations

* Create scripts dir for tests

* Remove multiline regex option

* fix string casting

* Use different std::filesystem::path ctor

* lalala windows lalala

* Run eslint

* Decouple DocsDownloader, LSPServer, LSPWorkspace; tests

* Address review comments
- Use raw strings in regex
- Incorrect usage of reference return for get_xml_doc_path

* add tests for xml + comment docs on hover

* add new line after codeblock end triple-backticks

* Skip duplicate configuration change events

--- a/package.json
+++ b/package.json
@@ -47,8 +47,30 @@
 					".cfg"
 				],
 				"configuration": "./language-configurations/cfg.json"
+			},
+			{
+				"id": "escript-injection"
+			},
+			{
+				"id": "escriptdoc"
 			}
 		],
+		"configuration": {
+            "type": "object",
+            "title": "EScript",
+            "properties": {
+                "escript.showModuleFunctionComments": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Show module function comments in documentation (hover, signature help)."
+                },
+                "escript.polCommitId": {
+                    "type": "string",
+                    "default": "",
+                    "description": "If set, use this specific POL commit (or tag) for documentation."
+                }
+			}
+		},
 		"grammars": [
 			{
 				"language": "escript",
@@ -59,6 +81,22 @@
 				"language": "escriptcfg",
 				"scopeName": "source.escriptcfg",
 				"path": "./grammars/cfg.json"
+			},
+			{
+				"language": "escriptdoc",
+				"scopeName": "source.escriptdoc",
+				"path": "./grammars/doc.json"
+			},
+			{
+				"language": "escript-injection",
+				"scopeName": "markdown.escriptdoc.codeblock",
+				"path": "./grammars/codeblock.json",
+				"injectTo": [
+					"text.html.markdown"
+				],
+				"embeddedLanguages": {
+					"meta.embedded.block.escriptdoc": "escriptdoc"
+				}
 			}
 		],
 		"breakpoints": [
@@ -177,7 +215,7 @@
 		"clean": "rimraf client/out server/out grammars/escript.json",
 		"e2e": "cd client && npm test",
 		"test": "jest --coverage",
-		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json && js-yaml grammars/cfg.yml > grammars/cfg.json",
+		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json && js-yaml grammars/cfg.yml > grammars/cfg.json && js-yaml grammars/codeblock.yml > grammars/codeblock.json && js-yaml grammars/doc.yml > grammars/doc.json",
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
 	"dependencies": {
